# gork-bot

./: .gitignore  pyproject.toml
config/: default_bot.json  default_bot.yaml  default_prompts.json  default_prompts.yaml
resources/: default_media_storage.json  default_presence_message_storage.json
src/gork_bot/: __init__.py  ai_requests.py  ai_service.py  app.py  bot.py  bot_utils.py  config.py  instructions.txt  media_manager.py  message_parsing.py  resource_handling.py  response_handling.py  user_manager.py
src/gork_bot/ai_service/: enums.py  requests.py  types.py
src/gork_bot/db_service/: __init__.py  connection.py  models.py
src/gork_bot/resource_management/: config.py
src/gork_bot/response_handling/: responses.py  types.py
